--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.13.0",
     "googleapis": "^140.0.1",
+    "mongoose": "^8.5.2",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
