changed auth method from json file connect to .env

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/gazmi82/server-artzan#readme",
   "devDependencies": {
+    "@google-apps/meet": "^0.3.0",
+    "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.13.0",
+    "google-auth-library-nodejs": "^0.0.1-security.6",
     "googleapis": "^140.0.1",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.14",
